<resources>
    <string name="nought_alwayson_warning"><![CDATA[If you did not get a VPN confirmation dialog, you have \"Always on VPN\" enabled for another app. In that case only that app is allowed to connect to a VPN. Check under Settings-> Networks more .. -> VPNS]]></string>
    <string name="open_settings">Go to Settings</string>
    <string name="home">Home</string>
    <string name="allowed_apps">Allowed apps</string>
    <string name="settings">Settings</string>
    <string name="close_drawer">Close drawer</string>
    <string name="open_drawer">Open drawer</string>
    <string name="auto">Auto</string>
    <string name="more_protocol">More Protocol</string>
    <string name="pasteText">Paste the website link that you can visit without VPN "\nto improve HTTP/HTTP+ connection" </string>
    <string name="tcp">TCP</string>
    <string name="udp">UDP</string>
    <string name="tcpp">TCP+</string>
    <string name="select_server">Select desired server:</string>
    <string name="not_connected">Not connected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting…</string>
    <string name="connected_to">Connected to %1$s</string>
    <string name="connecting_to">Connecting to %1$s</string>
    <string name="reconnecting">Reconnecting…</string>
    <string name="log_no_internet">Please connect to Internet first</string>
    <string name="share_message">Browse the Internet Securely and freely: https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="loading">Loading…</string>
    <string name="active_apps_count">Active apps (%1$d/%2$d)</string>
    <string name="appearance">Appearance</string>
    <string name="unknown_error">Something wrong happened, please try again later.</string>
    <string name="click_retry">Click here to retry</string>
    <string name="agree_label">By continuing to the app, you agree to our <b>Privacy Policy</b> and <b>Terms of Service</b></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="continue_to_app">Continue to App</string>
    <string name="servers_list">List of Servers</string>
    <string name="no_servers">No servers found!</string>
    <string name="close_app">Close app</string>
    <string name="disconnect_alert_title">Disconnect Alert</string>
    <string name="server_change_disconnect_alert_message">Changing server will make your current connection drop. Do you want to continue?</string>
    <string name="notifications">Notifications</string>
    <string name="dark_mode">Dark mode</string>
    <string name="persistent_notification_summary">Show persistent notification in the Notification bar</string>
    <string name="persistent_notification">Persistent notification</string>
    <string name="persistent_notif_title">VPN not connected!</string>
    <string name="persistent_notif_text">You are not PROTECTED…</string>
    <string name="subscribe">Subscribe</string>
    <string name="monthly_prompt">* Monthly subscription will auto-renew each month</string>
    <string name="monthly_price">%1$s/Month</string>
    <string name="yearly_price">%1$s/Year</string>
    <string name="purchase_flow_fail">Failed to start purchase event</string>
    <string name="subscribe_prompt">Enjoy ads-free vpn app for only:</string>
    <string name="language_pref_title">Language</string>
    <string name="auto_mode_pref_title">Auto connect mode</string>
    <string name="default_mode">Default (system)</string>
    <string name="lang_summary">Current selected language is %1$s</string>
    <string name="auto_mode_summary">When AUTO is selected, connect to %1$s</string>
    <string name="auto_mode_distance">Nearest Server</string>
    <string name="auto_mode_load">Least Loaded Server</string>
    <string name="language_dialog_title">Select display language</string>
    <string name="display_mode_summary">Display mode set to: %1$s</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="no_app_event">Sorry, no app to handle this action</string>
    <string name="app_search_hint">Type app name</string>
    <string name="app_search_placeholder">Search apps here</string>
    <string name="app_info">Browse the Internet Freely and Securely</string>
    <string name="go_back">Go Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="save_credentials">Save credentials</string>
    <string name="apps_using_change_disconnect_alert_message">Apps configuration has changed. You need to reconnect for those changes to take effect. Do you want to disconnect now?</string>
    <string name="update_required">Update Required</string>
    <string name="update_required_message">A new update is available. It is highly recommended that you install the update to keep using our app without any problems.</string>
    <string name="help_us_prompt">We need your help to maintain our servers up and running</string>
    <string name="notif_rates">Downloads: %1$s Uploads: %2$s</string>
    <string name="channel_name_push">Push notifications</string>
    <string name="channel_description_push">Firebase push notifications</string>
    <string name="channel_name_status">Connection status change</string>
    <string name="channel_description_status">Status changes of the OpenVPN connection (Connecting, authenticating,…)</string>
    <string name="channel_name_user_req">User interaction required</string>
    <string name="channel_description_user_req">OpenVPN connection requires a user input, e.g. two factor authentication</string>
    <string name="first_time_load">Loading for the first time\n Please wait…</string>
    <string name="retry">Retry</string>
    <string name="load_servers_error">Error while loading Servers! Please click below to retry.</string>
    <string name="certificate_outdated_update_prompt">Used certificate out of date. Please update app to continue connecting normally.</string>
    <string name="illegal_copy">Illegal copy</string>
    <string name="unlicensed_copy">It seems that you are using an unlicensed copy of the app. Please download the app from Google Play Store, it is completely free.</string>
    <string name="download">Download</string>
    <string name="uninstall_toast">You need to uninstall app first</string>
    <string name="version_1_s">Version: %1$s</string>
    <string name="hide_servers_list">Hide servers list</string>
    <string name="refresh_servers_list">Refresh servers list</string>
    <string name="purchase_description">Subscribe to remove ads</string>
    <string name="rate_description">Rate us</string>
    <string name="support_us_title">Support Us</string>
    <string name="support_us_prompt">A few seconds of your time will help us grow our servers. Do you wish to view a quick ad?</string>
    <string name="original_ip">Original IP: %1$s</string>
    <string name="new_ip">New IP: %1$s</string>
    <string name="data_down">Downloaded: %1$s</string>
    <string name="data_up">Uploaded: %1$s</string>
    <string name="purchase_success">Thanks for your support. Enjoy ad-free VPN :)</string>
    <string name="ping_text">%1$d ms</string>
    <string name="error">Error</string>
    <string name="latency">Latency: %1$dms</string>
    <string name="connected_devices">%1$d Connected Devices</string>
    <string name="share">Share</string>
    <string name="rate">Rate Us</string>
    <string name="auto_mode_random">Random Server</string>
    <string name="thank_you">Thank you :)</string>
    <string name="ads">Ads</string>
    <string name="reset_gdpr">Reset GDPR consent</string>
    <string name="not_consented_title">Consent required</string>
    <string name="not_consented_message">Our app relies solely on ads and subscriptions to maintain good quality servers. Please consent to use your personal data to serve ads (at least one vendor from the vendors\' list), or purchase a subscription to remove ads.</string>
    <string name="reload_form">Reload Consent Form</string>
    <string name="notifications_center">Notifications Center</string>
    <string name="delete_notification">Delete notification</string>
    <string name="new_notification">New: %1$s</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="notification_receive_time">Received: %1$s</string>
    <string name="enable_all">Enabled all</string>
    <string name="disable_all">Disable all</string>
    <string name="no_notifications">No new notification.</string>
    <string name="undo_delete_notification">Deleted successfully.</string>
    <string name="undo">Undo</string>
    <string name="system">System</string>
    <string name="auto_start_summary">Auto start app when device boots</string>
    <string name="auto_start_title">Auto start app upon boot</string>
    <string name="auto_connect_summary">Automatically connect to VPN upon device boot (Premium only)</string>
    <string name="auto_connect_title">Auto connect upon boot</string>
    <string name="auto_connect_server">Auto connect server</string>
    <string name="auto_connect_server_summary">Will automatically connect to: %1$s</string>
    <string name="prompt_draw_over_apps">Permission required</string>
    <string name="prompt_draw_over_apps_title">As of Android 10, Draw Over Apps permission is required for this feature to work. Please enable it in the next screen.</string>
    <string name="go_to_app_settings">Go to app settings</string>
    <string name="vpn_permission_required">You need to accept permission to enable this feature</string>
    <string name="draw_overlays_not_allowed">Did not allow permission, please try again.</string>
    <string name="prompt_vpn_always_on">This feature requires that you enable Always-On VPS from system settings. Please enable it to continue.</string>
    <string name="prompt_vpn_always_on_title">Always-On VPN required</string>
    <string name="go_to_vpn_settings">Go to VPN Settings</string>
    <string name="always_on_not_enabled">You did not enable Always On feature</string>
    <string name="preparing_to_connect">Preparing to connect</string>
    <string name="rom_vpn_error">Your image does not support the VPNService API, sorry :(</string>
    <string name="disconnect_in">You will be disconnected in %1$s</string>
    <string name="time_left">Time Left: %1$s</string>
    <string name="more_time">More Time?</string>
    <string name="no_ad">No ads available currently, please try again later</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="you_safe">You are safe for now</string>
    <string name="subscribed">You are a Premium user</string>
    <string name="free">Free</string>
    <string name="premium">Premium</string>
    <string name="premium_only">Premium only</string>
    <string name="open_info_description">Open info window</string>
    <string name="close_info_description">Close info window</string>
    <string name="server_name">%1$s (%2$s)</string>
    <string name="ip">IP: %1$s</string>
    <string name="up_time">Uptime: %1$s</string>
    <string name="reset">Reset</string>
    <string name="connect_prompt">Click CONNECT to start.</string>
    <string name="semesterly_price">%1$s/Semester</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="go_to_app_info_page">Go to Info Page</string>
    <string name="dns_prefs">DNS Settings</string>
    <string name="use_default_dns">Use default DNS</string>
    <string name="primary_dns">Primary DNS</string>
    <string name="secondary_dns">Secondary DNS</string>
    <string name="save">Save</string>
</resources>