<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

   <PreferenceCategory
      app:key="connect_category"
      app:title="@string/connect">

      <ListPreference
         app:defaultValue="load"
         app:dialogTitle="@string/auto_mode_pref_title"
         app:icon="@drawable/ic_auto"
         app:key="@string/auto_mode_key"
         app:summary="@string/auto_mode_summary"
         app:title="@string/auto_mode_pref_title" />

   </PreferenceCategory>

   <PreferenceCategory
      app:key="appearance_category"
      app:title="@string/appearance">

      <ListPreference
         app:defaultValue="default"
         app:dialogTitle="@string/language_dialog_title"
         app:icon="@drawable/ic_baseline_language_24"
         app:key="@string/lang_key"
         app:summary="@string/lang_summary"
         app:title="@string/language_pref_title" />

      <ListPreference
         app:defaultValue="default"
         app:dialogTitle="@string/dark_mode"
         app:icon="@drawable/ic_dark_mode_24"
         app:key="@string/display_mode_key"
         app:summary="@string/display_mode_summary"
         app:title="@string/dark_mode" />
   </PreferenceCategory>

   <PreferenceCategory
      app:key="system_category"
      app:title="@string/system">

      <Preference
         app:isPreferenceVisible="false"
         app:key="@string/go_to_vpn_settings_key"
         app:title="@string/go_to_vpn_settings" />

      <Preference
         app:icon="@drawable/ic_baseline_settings_24"
         app:key="@string/go_to_info_page_key"
         app:title="@string/go_to_app_info_page" />
   </PreferenceCategory>

   <PreferenceCategory
      app:key="notifications_category"
      app:title="@string/notifications">

      <SwitchPreferenceCompat
         app:defaultValue="true"
         app:icon="@drawable/ic_baseline_notifications_24"
         app:key="@string/persistent_notif_key"
         app:summary="@string/persistent_notification_summary"
         app:title="@string/persistent_notification" />
   </PreferenceCategory>

   <PreferenceCategory
      app:isPreferenceVisible="false"
      app:key="ads_category"
      app:title="@string/ads">

      <Preference
         app:isPreferenceVisible="false"
         app:key="@string/reset_gdpr_key"
         app:title="@string/reset_gdpr" />

   </PreferenceCategory>

</PreferenceScreen>