<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/background">

    <com.google.android.ads.nativetemplates.TemplateView
        android:id="@+id/nativeAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:gnt_template_type="@layout/gnt_small_template_view"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/close_button_background"
        android:elevation="10dp"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_error_24"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nativeAdView"
        tools:visibility="visible" />

    <include
        android:id="@+id/info_layout"
        layout="@layout/layout_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/info"
        app:layout_constraintTop_toBottomOf="@id/nativeAdView"
        tools:visibility="gone" />

    <RelativeLayout
        android:id="@+id/connectLayout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="15dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nativeAdView">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/man"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="fitCenter"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/man" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/ivStatusBackground"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animt" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivStatusForeground"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp"

            android:background="@drawable/ic_key" />


    </RelativeLayout>


    <TextView
        android:id="@+id/tvLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/not_connected"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectLayout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/currentLocationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLog">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/locationFlag"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_auto" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/locationFlag"
                android:layout_toRightOf="@id/locationFlag"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/locationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/auto"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/locationSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>

            <ImageView
                android:id="@+id/locationArrow_"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="203dp"

                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:elevation="3dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/timeLeftProgress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentLocationLayout"
        app:layout_constraintVertical_bias="0.16000003">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <RelativeLayout
                android:id="@+id/moreProtocolLay"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/moreImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/more" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_toEndOf="@+id/moreImage"
                    android:gravity="center"
                    android:text="@string/more_protocol"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="-10dp"
                    app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />


            </RelativeLayout>

            <View

                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tcp" />

                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/udp" />

                    <RadioButton
                        android:id="@+id/radio3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tcpp" />
                </RadioGroup>


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <ProgressBar
        android:id="@+id/timeLeftProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp"
        android:max="100"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/timeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:lines="2"
            android:text="@string/time_left"
            android:textSize="16sp"
            android:visibility="gone"

            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/moreTime"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"

            android:minHeight="0dp"
            android:padding="8dp"
            android:text="@string/more_time"
            android:textAllCaps="false"
            android:visibility="gone"

            tools:visibility="visible" />
    </LinearLayout>

    <!--   <androidx.cardview.widget.CardView-->
    <!--      android:id="@+id/currentLocationLayout_"-->
    <!--      android:layout_width="0dp"-->
    <!--      android:layout_height="wrap_content"-->
    <!--      android:layout_marginStart="32dp"-->
    <!--      android:layout_marginEnd="32dp"-->
    <!--      android:layout_marginBottom="16dp"-->
    <!--      android:clickable="true"-->
    <!--      android:focusable="true"-->
    <!--      android:foreground="?android:attr/selectableItemBackground"-->
    <!--      app:cardBackgroundColor="@color/card_background"-->
    <!--      app:cardCornerRadius="8dp"-->
    <!--      app:cardElevation="8dp"-->
    <!--      app:layout_constraintBottom_toBottomOf="parent"-->
    <!--      app:layout_constraintEnd_toEndOf="parent"-->
    <!--      app:layout_constraintStart_toStartOf="parent">-->

    <!--      <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--         android:layout_width="match_parent"-->
    <!--         android:layout_height="match_parent"-->
    <!--         android:padding="8dp">-->

    <!--         <androidx.appcompat.widget.AppCompatImageView-->
    <!--            android:id="@+id/locationFlag"-->
    <!--            android:layout_width="56dp"-->
    <!--            android:layout_height="56dp"-->
    <!--            android:src="@drawable/ic_auto"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent" />-->

    <!--         <TextView-->
    <!--            android:id="@+id/locationTitle"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="8dp"-->
    <!--            android:text="@string/auto"-->
    <!--            android:textSize="18sp"-->
    <!--            android:textStyle="bold"-->
    <!--            app:layout_constraintBottom_toTopOf="@id/locationSubtitle"-->
    <!--            app:layout_constraintStart_toEndOf="@id/locationFlag"-->
    <!--            app:layout_constraintTop_toTopOf="@id/locationFlag" />-->

    <!--         <TextView-->
    <!--            android:id="@+id/locationSubtitle"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="8dp"-->
    <!--            android:textSize="14sp"-->
    <!--            android:visibility="gone"-->
    <!--            app:layout_constraintBottom_toBottomOf="@id/locationFlag"-->
    <!--            app:layout_constraintStart_toEndOf="@id/locationFlag"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/locationTitle" />-->

    <!--         <androidx.appcompat.widget.AppCompatImageView-->
    <!--            android:id="@+id/locationArrow"-->
    <!--            android:layout_width="36dp"-->
    <!--            android:layout_height="36dp"-->
    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent"-->
    <!--            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />-->

    <!--      </androidx.constraintlayout.widget.ConstraintLayout>-->

    <!--   </androidx.cardview.widget.CardView>-->

</androidx.constraintlayout.widget.ConstraintLayout>